the rest, as well as the pictures (sorry George. Haven't committed in a while)

--- a/index.html
+++ b/index.html
@@ -1,49 +1,113 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" lang="en">
+<html class="gr__bootcamp-coders_cnm_edu"><head>
+		<meta charset="UTF-8" lang="en">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	</head>
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-                integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                  crossorigin="anonymous"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-                  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-                  crossorigin="anonymous"></script>
-
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-                  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-                  crossorigin="anonymous"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    </head>
-
-    <body>
-/***
-*This is our navbar, got a little Giesel in there to spice it up
-***/
-
-<nav class="container navbar navbar-expand-md navbar-light bg-light border border-muted rounded mt-3">
+	<body data-gr-c-s-loaded="true">
+		<nav class="container navbar navbar-expand-md navbar-light bg-light border border-muted rounded mt-3">
 			<a class="navbar-brand" href="#!">Title</a>
+
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
+
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 				<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+					<li class="nav-item">
+						<a class="nav-link disabled" href="#!">One Fish</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="#!">Two Fish</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link disabled" href="#!">Red Fish</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link disabled" href="#!">Blue Fish</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link disabled" href="#!">One Fish</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link disabled" href="#!">Two fish</a>
-					</li>
 				</ul>
 			</div>
+
 		</nav>
-</body>
+
+		<div class="jumbotron container py-5 my-5 by-5">
+			<h1 class="display-3">Hello, world!</h1>
+			<p class="lead">This is a simple hero unit, a simple jumbotron-style component for
+				calling extra attention to featured content or information.</p>
+			<p class="lead">
+				<a class="btn btn-primary btn-lg" href="#!" role="button">Learn More!</a>
+			</p>
+		</div>
+
+		<div class="container-fluid bg-light col-12 mb-4">
+			<div class="container bg-light">
+				<div class="row p-4 b-2">
+					<img src="dune-wurm.jpg" alt="Fear is the mind killer" class="col-lg-3 col-md-5 m-md-auto p-md-3 bt-md-3 pt-3">
+					<p class="col-lg-8 col-md-6 my-auto mx-auto pt-3">This is where we'll put our content, when we have some. It's not quite as easy as one might think, making a website. Though our blood, sweat, and tears may have built this destination, that was merely framework. Actually putting something of interest here will prove far more challenging. But this one is just about filled up, so on to the next.<br><br>Here we meet again, fair traveller. Still a search for entertainment, for a laugh, a cry, perhaps even a change in your worldviews. Sadly, you'll not find that here. Just empty words, and an empty site. Though, not quite as empty as one might imagine. After all, that once again satisfies our simulacrum of the previous site. Until next time, friend.
+					</p>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="container pt-5">
+			<div class="row">
+				<div class="col-7 col-md-2 mx-auto mt-3">
+					<img src="finger-gun.png" alt="that other Kenyan I like" class="rounded-circle">
+					<div class="card mt-3 bg-light mb-5">
+						<div class="card-body">
+							<p class="card-text">I am often seized by the fatal American need to have a pretty good time
+							</p>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="col-7 col-md-2 mx-auto mt-3">
+					<img src="lincoln-boolin.jpg" alt="the great emancipator" class="rounded-circle">
+					<div class="card mt-3 bg-light mb-5">
+						<div class="card-body">
+							<p class="card-text">Ask not what your country can do for you, ask instead what you can do for your country
+							</p>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="col-7 col-md-2 mx-auto mt-3">
+					<img src="roosevelt-blastin.jpg" alt="teddy himself" class="rounded-circle">
+					<div class="card mt-3 bg-light mb-5">
+						<div class="card-body">
+							<p class="card-text">What we have here, is a failure to communicate
+							</p>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="col-7 col-md-2 mx-auto mt-3">
+					<img src="washington-battling.jpg" alt="the OG POTUS" class="rounded-circle">
+					<div class="card mt-3 bg-light mb-5">
+						<div class="card-body">
+							<p class="card-text">All that is required for evil to triumph is that good men stand idly by
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<footer class="container container-fluid bg-dark col-12">
+			<div class="bg-dark text-light text-center p-2 pt-md-4">
+				<p>Foolish as it may be, I do find a great solace in knowing that all those great folk we admire were once just like us. That means that one day, perhaps, we can be just like them.</p>
+			</div>
+		</footer>
+
+
+</body></html>
